@@ -667,3 +667,19 @@ let using_match b =
 
 match (fun x -> x), fun x -> x with x, y -> x, y;;
 match fun x -> x with x -> x, x;;
+
+(* PR#6747 *)
+(* ok *)
+let n = object
+  method m : 'x 'o. ([< `Foo of 'x] as 'o) -> 'x = fun x -> assert false
+end;;
+(* ok, but not with -principal *)
+let n = 
+  object method m : 'x. [< `Foo of 'x] -> 'x = fun x -> assert false end;;
+(* fail *)
+let (n : < m : 'a. [< `Foo of int] -> 'a >) = 
+  object method m : 'x. [< `Foo of 'x] -> 'x = fun x -> assert false end;;
+(* fail *)
+let (n : 'b -> < m : 'a . ([< `Foo of int] as 'b) -> 'a >) = fun x ->
+  object method m : 'x. [< `Foo of 'x] -> 'x = fun x -> assert false end;;
+
