@@ -70,6 +70,7 @@ Bug fixes:
 - PR#6648: show_module should indicate its elision
 - PR#6650: Cty_constr not handled correctly by Subst
 - PR#6651: Failing component lookup
+- PR#6744: Univars can escape through polymorphic variants (partial fix)
 
 Features wishes:
 - PR#6367: introduce Asttypes.arg_label to encode labelled arguments
